partition report deletion request
Signed-off-by: Mathieu DEHARBE <mathieu.deharbe@rte-france.com>